--- a/locales/en.yml
+++ b/locales/en.yml
@@ -26,8 +26,8 @@ en:
             syntax: jira <issue>
             desc: Shows summary for <issue>
           todo:
-            syntax: jira create <type> [for] <project> "<summary>" ["<description>"] [-components "<components>"]
-            desc: Creates an issue of <type> in <project> with <summary> and optionally <description> and <components>
+            syntax: jira create <type> [for] <project> "<summary>" ["<description>"] [-components "<components>"] [-priority "<priority>"]
+            desc: Creates an issue of <type> in <project> with <summary> and optionally <description>, <components> and priority
         identify:
           stored: "You have been identified as %{email} to JIRA"
           deleted: You have been de-identified from JIRA
