--- a/locales/en.yml
+++ b/locales/en.yml
@@ -27,7 +27,7 @@ en:
             desc: Shows summary for <issue>
           todo:
             syntax: jira create <type> [for] <project> "<summary>" ["<description>"] [-components "<components>"] [-priority "<priority>"]
-            desc: Creates an issue of <type> in <project> with <summary> and optionally <description>, <components> and priority
+            desc: Creates an issue of <type> in <project> with <summary> and optionally <description>, <components> and <priority>
         identify:
           stored: "You have been identified as %{email} to JIRA"
           deleted: You have been de-identified from JIRA
